# qio

./: .gitignore  .gitmodules  CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  QIOConfig.cmake.in  README  TODOLIST  acinclude.m4  aclocal.m4  configure  configure.ac  index.html  params.json
doc/: Makefile.am  Makefile.in  qio_0p8.tex  qio_1p1.tex  qio_2p0.tex  qio_2p2.tex  qio_2p3.tex  qiodoc
examples/: CMakeLists.txt  Makefile.am  Makefile.in  layout_hyper.c  layout_hyper_mesh.c  layout_test  qio-convert-mesh-pfs.c  qio-convert-mesh-ppfs.c  qio-convert-mesh-singlefs.c  qio-convert-mesh.c  qio-convert-mesh.h  qio-convert-nersc.c  qio-copy-mesh-ppfs.c  qio-host-test.c  qio-host-test.sh  qio-host-test1.c  qio-host-test2.c  qio-mesh-utilities.c  qio-test-util.c  qio-test.c  qio-test.h  qio-test1.c  qio-test2.c  qio-test3.c  qio-test4.c  qio-test5.c  qio-test6.c  qio-test7.c
include/: Makefile.am  Makefile.in  config.h  crc32.h  dml.h  lrl.h  qio.h  qio_config.h  qio_config.h.in  qio_config_internal.cmake.h.in  qio_config_internal.h.in  qio_stdint.h  qio_string.h  qioxml.h  qioxml_ildg_record.h  qioxml_internal.h  qioxml_private.h  qioxml_usqcd_ksprop.h  qioxml_usqcd_prop.h  type32.h  xml.h  xml_string.h
lib/: CMakeLists.txt  Makefile.am  Makefile.in
lib/dml/: DML_crc32.c  DML_get_sitelist.c  DML_parscalar.c  DML_route.c  DML_scalar.c  DML_stream_in.c  DML_stream_out.c  DML_utils.c  Makefile.am
lib/lrl/: LRL_dummy.c  LRL_main.c  Makefile
lib/qio/: Makefile  QIO_close_read.c  QIO_close_write.c  QIO_host_file_conversion.c  QIO_host_utils.c  QIO_info.c  QIO_info_private.c  QIO_info_usqcd_gauge.c  QIO_info_usqcd_ksprop.c  QIO_info_usqcd_prop.c  QIO_next_record.c  QIO_open_read.c  QIO_open_write.c  QIO_read.c  QIO_read_record_data.c  QIO_read_record_info.c  QIO_string.c  QIO_utils.c  QIO_write.c
lib/xml/: Makefile  XML_dummy.c  XML_string.c
other_libs/: Makefile.am  Makefile.in
